# plex-rec

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: TECHNICAL.md
plex_recommender/: __init__.py  api.py  cli.py  config.py  labels.py  logging.py  scheduler.py
plex_recommender/db/: __init__.py  schema.py
plex_recommender/db/migrations/: 001_add_metadata_columns.py  002_add_tmdb_rating.py  003_add_library_to_recommendations.py  004_add_tmdb_enriched_at.py  005_add_plex_watched_columns.py  __init__.py
plex_recommender/embeddings/: __init__.py  service.py  store.py
plex_recommender/recommend/: engine.py  feedback.py  service.py
plex_recommender/sync/: __init__.py  plex.py  tautulli.py  tmdb.py
